--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     hibernate:
       #create : 내가가진 엔티티를 모두 drop 후 create -> 이후 애플리케이션 실행
       #create-drop : 내가가진 엔티티를 모두 drop 후 create -> 이후 애플리케이션 실행 ->애플리케이션 종료시점에 다시 drop 해준다
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         #show_sql: true
