--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -1,14 +1,14 @@
 spring:
   profiles:
     include: real-db
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
+#  datasource:
+#    driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
-    hibernate:
+#    hibernate:
       #create : 내가가진 엔티티를 모두 drop 후 create -> 이후 애플리케이션 실행
       #create-drop : 내가가진 엔티티를 모두 drop 후 create -> 이후 애플리케이션 실행 ->애플리케이션 종료시점에 다시 drop 해준다
-      ddl-auto: none
+#      ddl-auto: none
     properties:
       hibernate:
         #show_sql: true
