--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,22 +3,19 @@ server:
 
 spring:
   profiles:
-    active: local
-    group:
-      local : local
-      real : real
-  datasource:
-    #idea_hub_db - 테이블 이름 작성
-    url: jdbc:mariadb://localhost:3306/idea_hub_db?characterEncoding=UTF-8&serverTimezone=UTC
-    username: ideahub
-    password: ideahub
-    driver-class-name: org.mariadb.jdbc.Driver
+    active: real
+#  datasource:
+#    #idea_hub_db - 테이블 이름 작성
+#    url: jdbc:mariadb://localhost:3306/idea_hub_db?characterEncoding=UTF-8&serverTimezone=UTC
+#    username: ideahub
+#    password: ideahub
+#    driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
     hibernate:
       #create : 내가가진 엔티티를 모두 drop 후 create -> 이후 애플리케이션 실행
       #create-drop : 내가가진 엔티티를 모두 drop 후 create -> 이후 애플리케이션 실행 ->애플리케이션 종료시점에 다시 drop 해준다
-      ddl-auto: none
+#      ddl-auto: none
     properties:
       hibernate:
         #show_sql: true
