profile 에 이름 등록

--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -1,12 +1,8 @@
-server:
-  port: 8001
-
-
 spring:
   config:
     activate:
       on-profile: real
-  profiles:
+  profiles: real
     include: real-db
 #  datasource:
 #    driver-class-name: org.mariadb.jdbc.Driver
