--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,5 @@
-server:
-  port: 8001
-
 spring:
-  config:
-    activate: real
-  profiles:
-    group:
-      real: real
+  profiles: dev
   datasource:
     #idea_hub_db - 테이블 이름 작성
     url: jdbc:mariadb://localhost:3306/idea_hub_db?characterEncoding=UTF-8&serverTimezone=UTC
