--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   profiles: dev
-  datasource:
-    #idea_hub_db - 테이블 이름 작성
-    url: jdbc:mariadb://localhost:3306/idea_hub_db?characterEncoding=UTF-8&serverTimezone=UTC
-    username: ideahub
-    password: ideahub
-    driver-class-name: org.mariadb.jdbc.Driver
+#  datasource:
+##    idea_hub_db - 테이블 이름 작성
+#    url: jdbc:mariadb://localhost:3306/idea_hub_db?characterEncoding=UTF-8&serverTimezone=UTC
+#    username: ideahub
+#    password: ideahub
+#    driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
     hibernate:
