include로 바로 연결

--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -2,7 +2,7 @@ spring:
   config:
     activate:
       on-profile: real
-  profiles: real
+  profiles:
     include: real-db
 #  datasource:
 #    driver-class-name: org.mariadb.jdbc.Driver
