--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ plugins {
 }
 
 group = 'ideaboard'
-version = '0.0.1-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
+//version = '0.0.1-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 
