yml group 설정 테스트

--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -1,6 +1,6 @@
-spring:
-  profiles:
-    include: real-db
+server:
+  port: 8001
+
 #  datasource:
 #    driver-class-name: org.mariadb.jdbc.Driver
 
