yml profile 설정 성공

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
-
+server:
+  port: 8001
 
 spring:
   profiles:
     active: local
     group:
-     "real": "real,real-db"
+     "real": "real-db"
      "local": "local"
 
 logging:
