--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   profiles:
     active: local
     group:
-     "real": "real-db"
+     "real1": "real-db"
      "local": "local"
 
 logging:
