1. OAuth2 소셜로그인 환경설정중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     active: local
     group:
      "real1": "real-db"
-     "local": "local"
+     "local": "local,local-oauth"
 
 
 logging:
