1. OAuth2 소셜로그인 배포를위한 커밋

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     group:
      "real1": "real-db"
      "local": "local,local-oauth"
+  session: #세션 저장소 db로 활용하기 위한 설정ㅓ
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always # 세션 테이블 생성
 
 
 logging:
