--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
      "local": "local,local-oauth"
   session: #세션 저장소 db로 활용하기 위한 설정ㅓ
     store-type: jdbc
-    jdbc:
-      initialize-schema: always # 세션 테이블 생성
+#    jdbc:
+#      initialize-schema: always # 세션 테이블 생성
 
 
 logging:
