1. session db 테이블 자동생성은 local yml 에만 생성되도록 설정 위치를 바꿧다

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   session: #세션 저장소 db로 활용하기 위한 설정ㅓ
     store-type: jdbc
-    jdbc:
-      initialize-schema: always # 세션 테이블 생성
+#    jdbc:
+#      initialize-schema: always # 세션 테이블 생성
   jpa:
     properties:
       hibernate:
