--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-jdbc'
 	// 스프링 시큐리티 테스트를 위한 의존성 추가
 	implementation 'org.springframework.security:spring-security-test'
+	//
+	implementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
