--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,13 +8,14 @@ spring:
 #    driver-class-name: org.mariadb.jdbc.Driver
 #  session: #세션 저장소 db로 활용하기 위한 설정ㅓ
 #    store-type: jdbc
-##    jdbc:
-##      initialize-schema: always # 세션 테이블 생성
+#    jdbc:
+#      initialize-schema: always # 세션 테이블 생성
   jpa:
     properties:
       hibernate:
+#        ddl-auto: create
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect #mariaDB를 위한 방언
+#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect #mariaDB를 위한 방언
   security:
     oauth2:
       client:
