--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,9 +8,7 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL57Dialect
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=MYSQL
-#    username: sa
-#    password:
+    url: jdbc:h2:mem:testdb;MODE=MYSQL;NON_KEYWORDS=USER
     driver-class-name: org.h2.Driver
   session: #세션 저장소 db로 활용하기 위한 설정
     store-type: jdbc
@@ -22,3 +20,4 @@ spring:
             client-id: "test"
             client-secret: "test"
             scope: "profile,email"
+
