--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,9 +6,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL57Dialect
+        dialect: org.hibernate.dialect.MySQL5Dialect #57 쓰면 에러남
+        dialect.storage_engine: innodb
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=MYSQL
+    url: jdbc:h2:mem:testdb;MODE=MYSQL;NON_KEYWORDS=USER
     driver-class-name: org.h2.Driver
   session: #세션 저장소 db로 활용하기 위한 설정
     store-type: jdbc
