--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script: "./gradlew clean build"
 notifications:
   email:
     recipients:
-      - "hoan0418@naver.com"
+      - hoan0418@naver.com
