--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,19 @@ script: "./gradlew clean build"
 #1. 현재위치의 모든파일을 ideahub로 압축 한다 -> 명령어의 마지막 위치는 내 프로젝트 이름이어야한다
 #2. deploy 디렉토리를 travis CI가 실행 중인 위치에서 생성
 #3. deploy/ideahub 로 zip 파일 위치 변경
+# 기존 소스
+#  - zip -r ideahub *
+#  - mkdir -p deploy
+#  - mv ideahub.zip deploy/ideahub.zip
 before_deploy:
-  - zip -r ideahub *
-  - mkdir -p deploy
-  - mv ideahub.zip deploy/ideahub.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성 - travis ci 는 s3로 특정 파일 업로드 불가 - 디렉토리 단위로만 가능
+  - cp scripts/*.sh before-deploy/ # before-deploy 디렉토리에 zip파일로 포함시킬 파일들을 저장한다
+  - cp appspect.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 zip -r 명령어로 디렉토리 전체 압축
+  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/ideahub.zip # deploy로 zip파일 이동
+
 
 #S3 파일 업로드 혹은 CodeDeploy로 배포 등 외부 서비스와 연동될 행위들을 선언
 deploy:
