--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script: "./gradlew clean build"
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성 - travis ci 는 s3로 특정 파일 업로드 불가 - 디렉토리 단위로만 가능
   - cp scripts/*.sh before-deploy/ # before-deploy 디렉토리에 zip파일로 포함시킬 파일들을 저장한다
-  - cp appspect.yml before-deploy/
+  - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 zip -r 명령어로 디렉토리 전체 압축
   - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
