1. 무중단 배포를 위한 스크립트 작성(health,start,sto,switch) 2. 버전 + new Date 추가

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 
 group = 'ideaboard'
-version = '1.0.3-SNAPSHOT'
+version = '1.0.3-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = '11'
 
 
