--- a/src/main/resources/application-deploy-real2.yml
+++ b/src/main/resources/application-deploy-real2.yml
@@ -1,9 +1,9 @@
 server:
   port: 8002
 spring:
-  profiles:
-    group:
-      active: real2
-      "real2": "real-db,real-oauth"
+#  profiles:
+#    group:
+#      active: real2
+#      "real2": "real-db,real-oauth"
   session:
     store-type: jdbc
