1. profiles 대신 파일명으로 선택 port가 안먹는다

--- a/src/main/resources/application-deploy-real2.yml
+++ b/src/main/resources/application-deploy-real2.yml
@@ -1,9 +1,14 @@
 server:
   port: 8002
 spring:
-#  profiles:
-#    group:
-#      active: real2
-#      "real2": "real-db,real-oauth"
   session:
     store-type: jdbc
+  profiles:
+    group:
+      active: real2
+      "real2": "real-db,real-oauth"
+
+
+logging:
+  level:
+    org.hibernate.SQL: debug
