1. start.sh 수정 1-1. active = real2, yml file name : deploy-real2, remove application.yml

--- a/src/main/resources/application-deploy-real2.yml
+++ b/src/main/resources/application-deploy-real2.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     group:
       active: real2
-      "real2": "real-db,real-oauth"
+      "real2": "deploy-real2,real-db,real-oauth"
   session:
     store-type: jdbc
 
