1. real-db server port Prop is duplicate settings of real2.yml

--- a/src/main/resources/application-deploy-real3.yml
+++ b/src/main/resources/application-deploy-real3.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     group:
       active: real3
-      "real3": "deploy-real3,real-db,real-oauth"
+      "real3": "real-db,real-oauth"
   session:
     store-type: jdbc
 
